templates/tpl_modified_responsive/stylesheet.css
/* ... */
ul.bxcarousel_bestseller li .carousel_box {
  padding:5px;
}  
ul.bxcarousel_bestseller li .carousel_box .cb_image {
  position:relative;
  display:block;
  height:113px;
  overflow:hidden;
}
ul.bxcarousel_bestseller li .carousel_box .cb_image img {
  position: absolute;
  right: 0;
  top: 0;
  bottom: 0;
  left: 0;
  display: block;
  margin: auto;
  max-height: 110px;
}
ul.bxcarousel_bestseller li .carousel_box .cb_title {
  display:block;
  border-top: 1px solid #ddd;
  margin: 7px 0 0 0;
  padding:5px 0 2px 0;
  font-size:11px;
  text-align:center;
  line-height:15px;
  height:30px;
  color:#7c2759;
  font-weight:400;
}
ul.bxcarousel_bestseller li .carousel_box a:hover {
  text-decoration:none;
}

ul.bxcarousel_slider {
  list-style-type:none;
}
ul.bxcarousel_slider li {
  display:none;
}
ul.bxcarousel_slider li:first-child {
  display:block;
}
ul.bxcarousel_slider img {
  position: relative !important;
}
/* END carousel Bestseller box */


/* 41. START Janolaw.de (BASIC Template for AGB Hosting Content) */
.janolaw-absatz {
  font-size: 12px;
  margin: 8px 4px 4px 8px;        
}
.janolaw-paragraph {
  font-size: 14px;
  font-weight: bold;
  text-align: center;
  margin: 16px 4px 4px 8px;
}
#janolaw-paragraph {
  font-size: 14px;
  font-weight: bold;
  text-align: center;
  margin: 16px 4px 4px 8px;
}
.janolaw-text {
  font-size: 12px;
  margin: 8px 4px 4px 8px;
}
.janolaw-adress {
  font-size: 12px;
  margin: 8px 4px 4px 8px;
}
.janolaw-block {
  font-size: 12px;
  margin: 8px 4px 4px 8px;
}
#janolaw-footer{
}
#janolaw-body{
}
/* END Janolaw.de */


/* 42. START sitemap  */
.sitemap {
  -moz-column-count: 3;
  -moz-column-gap: 60px;
  -moz-column-rule: 1px solid #eee;
  -webkit-column-count: 3;
  -webkit-column-gap: 60px;
  -webkit-column-rule: 1px solid #eee;
  column-count: 3;
  column-gap: 60px;
  column-rule: 1px solid #eee;
}

.sitemap > ul.nocolumnbreak {
  overflow: hidden;
  -webkit-column-break-inside: avoid;
  page-break-inside: avoid;
  -moz-column-break-inside:avoid;
  column-break-inside:avoid;
  break-inside: avoid; 
  break-inside: avoid-column;
  margin-left:0px;
  margin-bottom:30px;
  list-style-type:none;
  display:inline-block;
  width:100%;
}
.nocolumnbreak {
  margin-bottom: 30px !important;
}
.sitemap > ul > li {
  float:left;
  width:100%;
}
.sitemap ul {
  list-style-type:none;
  margin-left:0px;
}

.sitemap ul > li.sitemap_header {  
  border-top: 1px solid #ddd;
  border-bottom: 1px solid #ddd;
  font-size:13px;
  font-weight:600;
  line-height:31px; 
}
.sitemap ul > li.sitemap_header > a {
  background:#f5f5f5;
  color:#7c2759;
  display:block;
  padding: 0px 5px;
}
.sitemap ul > li.sitemap_header a:hover {
  color:#333 !important;
  text-decoration:none !important;
  background: #f5f5f5 !important;
}

.sitemap ul li li {  
  border-top: 1px solid #ddd;
  font-size:13px;
  font-weight:normal;
  line-height:31px; 
}
.sitemap ul li li > a {
  background:#fff !important;
  color:#333;
  display:block;
  padding: 0px 5px;
}
.sitemap a:hover {
  color:#7c2759 !important;
  text-decoration:none !important;
  background: #f5f5f5 !important;
}
/* END sitemap  */


/* 43. START product_reviews_info */
.pri_imagebox {
  float:left;
  width:262px;
}
.pri_big_image {
  position:relative;
  width:240px;
  min-height:240px;
  margin: 0px 0px 0px 0px;
  border:1px solid #eee;
}
.pri_big_image img {
  position:absolute;
  margin: auto;
  left:0px;
  right:0px;
  bottom:0px;
  top:0px;
  max-width:240px;
  height:auto;
}  
.pri_zoomtext {
  line-height:13px;
  font-size:9px;
  padding:10px 0px;
}
.pri_content {
  float:right;
  width:58%;
}
.pri_rating_text {
  float:left;
  display:inline-block;
  padding-right:5px;
}
.pri_rating_stars {
  float:left;
  display:inline-block;
}
.pri_rating_stars img {
  float:left;
}
.pri_rating_icons {
  display:inline-block;
  font-size:13px;
  line-height:17px;
  color:#ccc;
  padding: 0px 0px 0 0;
}
.pri_rating_icons .fas {
  padding: 0 1px 0 0;
}
.pri_rating_icons .full  {
  color:#f1c40f; 
}
/* END product_reviews_info */


/* 44. START Last viewed in account */
ul.historylist {
  list-style-type:none !important;
  margin-left: 0px !important;
}
ul.historylist li {
  border-bottom: 1px solid #ddd;
  padding: 15px 0px;
}
ul.historylist li.first {
  padding: 0px 0px 15px 0px;
}
.hl_image {
  float:left;
  width: 50px;
  height:50px;
  overflow:hidden;
  padding: 2px;
  border: 1px solid #ddd;
  position:relative;
  display:block;
  margin: 0px 20px 0px 0px;
}
.hl_image img {
  max-width: 50px;
  max-height:50px;
  position:absolute;
  margin: auto;
  left:0px;
  right:0px;
  top:0px;
  bottom:0px;
}
.hl_text {
  float:left;
  display:block;
  width:49%;
}
.hl_text_entry {
  display:block;
  padding: 0px 0px 8px 0px;
}
.hl_price {
  display:block;
  float:right;
  width:28%;
  text-align:right;
  font-weight:bold;
}
.hl_price .no_price {
  font-size:9px;
  line-height:11px;
  font-weight:normal;
  display:block;
  padding:0px 0 0 0;
  color:#666;
}
.hl_price .special_price {
  display:block;
  font-size:13px;
  line-height:19px;
  color:#e74c3c;
}
.hl_price .small_price {
  font-size:9px;
  font-weight:normal;
  line-height:11px;
}
.hl_price .graduated_price {
  display:block;
}
.hl_price .item_price {
  display:block;
  font-size:11px;
}
/* END Last viewed in account */


/* 45. START account cart and click buttons */
.account_row_payment,
.account_row_shipping {
  padding:3px 0px;
}
.account_row_payment span,
.account_row_shipping span {
  display:inline-block;
  width:23px;
  float:left;
}
ul.address_block {
  margin: 15px 0px 0px 0px !important;
  list-style-type:none !important;
}
ul.address_block li {
  border-top: 1px solid #ddd;
  margin-top:10px;
  padding-top: 10px;
}
ul.address_block li .address_check {
  float:left;
  display:inline-block;
  width:23px;
}
ul.address_block li .address_head {
  display:inline-block;
  font-weight:bold;
}
ul.address_block li .address {
  display:block;
  padding:5px 0px 0px 0px;
}
/* ... */

